<resources>
    <string-array name="maptype">
        <item>地図</item>
        <item>地形</item>
        <item>衛星</item>
        <item>実景</item>
        <item>なし</item>
    </string-array>
    <string name="mode">tablet</string>
    <string name="system">システム</string>
    <string name="display">ディスプレイ</string>
    <string name="bright">明るさ</string>
    <string name="fullscreen">全画面表示</string>
    <string name="manual">自由設定</string>
    <string name="update">アップデート</string>
    <string name="dbupdate">データベースを更新しています</string>
    <string name="other">その他</string>
    <string name="service">Google Service</string>
    <string name="legal">法的情報</string>
    <string name="snapshot">スナップショット</string>
    <string name="traffic">交通状況</string>
    <string name="radius">表示半径</string>
    <string name="tip_tablet">目的地選んでください</string>
    <string name="tip_select_self">自分で決める</string>
    <string name="menu_back">1つ前に戻る</string>
    <string name="menu_start">始めに戻る</string>
    <string name="hello">ハロー</string>
    <string name="sns">SNS</string>
    <string name="app_name">バスネット</string>
    <string name="home">ホームへ</string>
    <string name="reset">リセット</string>
    <string name="departure">出発地</string>
    <string name="destination">目的地</string>
    <string name="get_your_departure">設定の出発地</string>
    <string name="get_your_destination">設定の目的地</string>
    <string name="run">実行</string>
    <string name="time_and_route">時刻・路線設定</string>
    <string name="busnet">Bus-Net for Android</string>
    <string name="now">現在時刻</string>
    <string name="route_search">経路探索</string>
    <string name="timetable_search">時刻表検索</string>
    <string name="unspecified">未指定</string>
    <string name="share_application">アプリを友達に教える</string>
    <string name="NO">いいえ</string>
    <string name="YES">はい</string>
    <string name="no"></string>
    <string name="management_point">地点管理</string>
    <string name="registration_point">地点登録</string>
    <string name="bookmark">気に入り</string>
    <string name="result_of_route_search">経路探索結果</string>
    <string name="close">閉じる</string>
    <string name="save_the_route">経路保存</string>
    <string name="share_route">経路を共有</string>
    <string name="set_the_line">路線設定</string>
    <string name="set_the_time">時刻設定</string>
    <string name="use_bus_and_railways">利用バス・鉄道</string>
    <string name="set_time_and_route">時刻・路線設定</string>
    <string name="at_this_time">この時刻に</string>
    <string name="departure_radio">出発</string>
    <string name="destination_radio">到着</string>
    <string name="hour">時間</string>
    <string name="minute">分</string>
    <string name="later">後に出発</string>
    <string name="ride_bus_stop">乗車バス停</string>
    <string name="alighting_bus_stop">下車バス停</string>
    <string name="explore_timetable">この区間の時刻表を検索</string>
    <string name="plase_input_bus_stop_or_station">バス停(駅)を入力</string>
    <string name="select_a_ride_bus_stop">乗車バス停選択</string>
    <string name="select_an_alighting_bus_stop">下車バス停選択</string>
    <string name="tweet_by_app">Twitterアプリでつぶやく</string>
    <string name="tweet_by_line">LINEで送る</string>
    <string name="peripheral">周辺</string>
    <string name="explore">検索</string>
    <string name="registration">登録</string>
    <string name="history">履歴</string>
    <string name="history_or_registration">▷►</string>
    <string name="map">地図</string>
    <string name="showmap">地図表示</string>
    <string name="select_bus">利用バス設定</string>
    <string name="history_and_registration">履歴・登録地</string>
    <string name="set_map">地図から設定</string>
    <string name="set_around">周辺のランドマークから設定</string>
    <string name="set_around_busstop">周辺のバス停から設定</string>
    <string name="time_and_route_tab1">tab1</string>
    <string name="time_and_route_tab2">tab2</string>
    <string name="time_and_route_tab3">tab3</string>
    <string name="time_and_route_tab4">tab4</string>
    <string name="time_and_route_tab5">tab5</string>
    <string name="time_and_route_tab1_title">現在\n時刻</string>
    <string name="time_and_route_tab2_title">~分後</string>
    <string name="time_and_route_tab3_title">日時\n指定</string>
    <string name="time_and_route_tab4_title">朝一番</string>
    <string name="time_and_route_tab5_title">最終便</string>
    <string name="setting">設定</string>
    <string name="operation_status">運行状況</string>
    <string name="bus_guide">バスガイド</string>
    <string name="set_your_location">現在地を設定</string>
    <string name="set_start_location">出発地を設定</string>
    <string name="gps">GPS</string>
    <string name="hinomaru">日ノ丸</string>
    <string name="nikko">日本交通</string>
    <string name="railway">鉄道</string>
    <string name="cancel">キャンセル</string>
    <string name="decision">決定</string>
    <string name="delete">削除</string>
    <string name="wait_a_minute">しばらくお待ちください</string>
    <string name="while_positioning_gps">GPS測位中</string>
    <string name="general_information">総合情報</string>
    <string name="platform">乗場案内</string>
    <string name="use_bus">利用バス</string>
    <string name="set_bus">利用バス設定</string>
    <string name="change_name">名称変更</string>
    <string name="back">戻る</string>
    <string name="candidate">候補</string>
    <string name="candidate_list">▽候補一覧表示▽</string>
    <string name="set_day">日付設定</string>
    <string name="set_day_and_bus">日付・利用バス設定</string>
    <string name="swap">⇅</string>
    <string name="love">♥</string>
    <string name="twitter">Twitterアプリを使う</string>
    <string name="tweet_by_facebook">Facebookシェア</string>
</resources>