<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/route_search_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/dark_blue"
            android:gravity="center"
            android:text="@string/route_search"
            android:textSize="20sp"
            android:layout_margin="2sp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCCCCC"
            android:gravity="center"
            android:text="@string/set_time_and_route"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/set_the_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/dark_blue"
            android:gravity="center"
            android:text="@string/set_the_time"
            android:textSize="20sp"
            android:layout_margin="2sp"
            android:textColor="@color/white"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10sp"
        android:text="@string/use_bus_and_railways"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/pink"
        android:orientation="vertical"
        android:layout_marginLeft="25sp"
        android:layout_marginRight="25sp"
         >

        <CheckBox
            android:id="@+id/hinomaru_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@color/pink"
            android:checked="true"
            android:paddingLeft="35sp"
            android:text="@string/hinomaru"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <CheckBox
            android:id="@+id/nikko_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:checked="true"
            android:paddingLeft="35sp"
            android:text="@string/nikko"
            android:textColor="@color/black"
            android:textSize="50sp" />

        <CheckBox
            android:id="@+id/jr_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/pink"
            android:checked="true"
            android:paddingLeft="35sp"
            android:text="@string/railway"
            android:textColor="@color/black"
            android:textSize="50sp" />
    </LinearLayout>

     <Button
            android:id="@+id/decision_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:background="@color/dark_blue"
            android:textSize="40sp"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:text="@string/decision" />

</LinearLayout>