<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50sp"
        android:background="@color/gray"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@color/dark_blue"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#CCCCCC"
            android:gravity="center"
            android:text="@string/set_day_and_bus"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/set_the_time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2sp"
            android:layout_weight="1"
            android:background="@color/gray"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
       	 	android:background="@color/blue"
            android:orientation="vertical"
             >

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:text="@string/set_day"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10sp"
            android:calendarViewShown="false"
            android:background="@color/black"/>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10sp"
            android:text="@string/use_bus"
            android:textColor="@color/black"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25sp"
            android:layout_marginRight="25sp"
            android:background="@color/pink"
            android:orientation="vertical" >

            <CheckBox
                android:id="@+id/hinomaru_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:checked="true"
                android:paddingLeft="35sp"
                android:text="@string/hinomaru"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <CheckBox
                android:id="@+id/nikko_checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/pink"
                android:checked="true"
                android:paddingLeft="35sp"
                android:text="@string/nikko"
                android:textColor="@color/black"
                android:textSize="40sp" />
        </LinearLayout>

        <Button
            android:id="@+id/decision_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="5sp"
            android:layout_marginRight="5sp"
            android:background="@color/dark_blue"
            android:text="@string/decision"
            android:textColor="@color/white"
            android:textSize="40sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>