<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <!-- MapViewをLayout xmlに定義 -->
    <!-- apiKeyを記載 -->
    <!--<com.google.android.maps.MapView-->
    <fragment
        android:id="@+id/map_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:apiKey="01vHZUNSpCUQNIAjOOlWcjL3eb2ShgU8TlcHcxQ"
        android:clickable="true"
        android:name="com.google.android.gms.maps.MapFragment" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="1sp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/decision_button"
            android:layout_width="0dip"
            android:enabled="false"
            android:layout_height="60sp"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:background="@color/gray"
            android:text="@string/decision" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="0dip"
            android:layout_height="60sp"
            android:layout_marginLeft="1sp"
            android:layout_marginRight="1sp"
            android:textColor="@color/black"
            android:enabled="false"
            android:background="@color/gray"
            android:layout_weight="1"
            android:text="@string/registration" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="0dip"
            android:layout_height="60sp"
            android:textColor="@color/black"
            android:background="@color/gray"
            android:layout_weight="1"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>