<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue" >
  <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50sp"
            android:background="@color/gray"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/close_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/dark_blue"
                android:gravity="center"
                android:text="@string/close"
                android:textSize="20sp"
                android:layout_margin="2sp"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/select_a_bus_stop_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:text="@string/platform"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/gray"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/gray"
                android:textSize="15sp"
                >
                <requestFocus />
                </TextView>
        </LinearLayout>

    <ImageView
        android:paddingTop ="30sp"
        android:id="@+id/platform_imageView"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/black_frame" />

</LinearLayout>